# SNN-GPU

./: .cursorrules  CMakeLists.txt  LICENSE  Projects Ideas.txt  compile_commands.json  main.cpp
app/: CLBoilerplate.cpp  CLBoilerplate.h  main.cpp
